--- a/para-agentes.html
+++ b/para-agentes.html
@@ -323,73 +323,78 @@
 <section class="section" id="pricing" style="background:var(--gray-l)">
   <div class="section-inner">
     <div class="section-tag">Preços</div>
-    <h2>Só paga quando funciona</h2>
-    <p class="subtitle">Comece grátis com 3 leads. Escolha o plano que se adapta ao seu negócio. Só paga por resultados.</p>
+    <h2>Leads ilimitados. Sempre.</h2>
+    <p class="subtitle">Todos os planos incluem leads ilimitados. Escolha o plano que se adapta ao tamanho da sua carteira de imóveis.</p>
     <div class="pricing-grid">
       <div class="price-card">
         <div class="price-card-body">
-          <div class="tier" style="color:var(--gray)">Free</div>
+          <div class="tier" style="color:var(--gray)">GRÁTIS</div>
           <div><span class="amount">€0</span></div>
-          <div class="desc">Experimente — sem cartão necessário</div>
-          <a href="agent-dashboard.html" class="btn btn-outline" style="width:100%;justify-content:center;margin-bottom:20px">Começar</a>
-          <div class="feat"><span class="check">✓</span> Up to 3 listings</div>
-          <div class="feat"><span class="check">✓</span> <strong>3 leads grátis</strong> included</div>
-          <div class="feat"><span class="check">✓</span> Full buyer profiles</div>
-          <div class="feat"><span class="check">✓</span> Claim existing listings</div>
-          <div class="feat"><span class="check">✓</span> Agent profile</div>
-          <div class="feat off"><span class="check">—</span> Priority placement</div>
-          <div class="feat off"><span class="check">—</span> Featured badge</div>
-        </div>
-      </div>
-      <div class="price-card">
-        <div class="price-card-body">
-          <div class="tier" style="color:var(--blue)">10 Lead Pack</div>
-          <div><span class="amount">€99</span><span class="per">/mês</span></div>
-          <div class="desc">Até 50 imóveis</div>
-          <a href="agent-dashboard.html" class="btn btn-primary" style="width:100%;justify-content:center;margin-bottom:20px">Subscrever</a>
-          <div class="feat"><span class="check">✓</span> <strong>10 leads/mês</strong></div>
-          <div class="feat"><span class="check">✓</span> Up to 10 listings</div>
-          <div class="feat"><span class="check">✓</span> Full buyer profiles</div>
-          <div class="feat"><span class="check">✓</span> Lead management tools</div>
-          <div class="feat"><span class="check">✓</span> Analytics dashboard</div>
-          <div class="feat off"><span class="check">—</span> Priority placement</div>
-          <div class="feat off"><span class="check">—</span> Featured badge</div>
-        </div>
-      </div>
-      <div class="price-card">
-        <div class="price-card-body">
-          <div class="tier" style="color:var(--blue)">25 Lead Pack</div>
-          <div><span class="amount">€199</span><span class="per">/mês</span></div>
-          <div class="desc">Até 120 imóveis</div>
-          <a href="agent-dashboard.html" class="btn btn-primary" style="width:100%;justify-content:center;margin-bottom:20px">Subscrever</a>
-          <div class="feat"><span class="check">✓</span> <strong>25 leads/mês</strong></div>
-          <div class="feat"><span class="check">✓</span> Unlimited listings</div>
-          <div class="feat"><span class="check">✓</span> Full buyer profiles</div>
-          <div class="feat"><span class="check">✓</span> Lead management tools</div>
-          <div class="feat"><span class="check">✓</span> Priority listing placement</div>
-          <div class="feat"><span class="check">✓</span> Featured agent badge</div>
-          <div class="feat off"><span class="check">—</span> White-label quiz</div>
+          <div class="desc">Para sempre · sem cartão</div>
+          <a href="agent-dashboard.html" class="btn btn-outline" style="width:100%;justify-content:center;margin-bottom:20px">Começar Grátis</a>
+          <div class="feat"><span class="check">✓</span> <strong>Leads ilimitados</strong> (básicos)</div>
+          <div class="feat"><span class="check">✓</span> Imóveis ilimitados</div>
+          <div class="feat"><span class="check">✓</span> Lead básico: nome, email, mensagem</div>
+          <div class="feat"><span class="check">✓</span> Reivindicar imóveis existentes</div>
+          <div class="feat off"><span class="check">—</span> Perfil de agente premium</div>
+          <div class="feat off"><span class="check">—</span> Perfil do comprador completo</div>
+          <div class="feat off"><span class="check">—</span> Tags de intenção do comprador</div>
+          <div class="feat off"><span class="check">—</span> Perfil de comprador ideal por imóvel</div>
         </div>
       </div>
       <div class="price-card pop">
-        <div class="pop-badge">MELHOR VALOR</div>
+        <div class="pop-badge">MAIS POPULAR</div>
         <div class="price-card-body">
-          <div class="tier" style="color:var(--orange)">Unlimited</div>
+          <div class="tier" style="color:var(--blue)">STARTER</div>
           <div><span class="amount">€99</span><span class="per">/mês</span></div>
-          <div class="desc">Compromisso de 6 meses · leads ilimitados</div>
-          <a href="agent-dashboard.html" class="btn btn-orange" style="width:100%;justify-content:center;margin-bottom:20px">Subscrever Ilimitado</a>
-          <div class="feat"><span class="check">✓</span> <strong>Leads ilimitados</strong></div>
-          <div class="feat"><span class="check">✓</span> Unlimited listings</div>
-          <div class="feat"><span class="check">✓</span> Full buyer profiles & personas</div>
-          <div class="feat"><span class="check">✓</span> Priority listing placement</div>
-          <div class="feat"><span class="check">✓</span> Featured agent badge</div>
-          <div class="feat"><span class="check">✓</span> Advanced analytics</div>
-          <div class="feat"><span class="check">✓</span> Priority support</div>
+          <div class="desc">Até 50 imóveis reivindicados</div>
+          <a href="agent-dashboard.html" class="btn btn-primary" style="width:100%;justify-content:center;margin-bottom:20px">Subscrever</a>
+          <div class="feat"><span class="check">✓</span> <strong>Leads ilimitados</strong> (premium)</div>
+          <div class="feat"><span class="check">✓</span> Até <strong>50 imóveis</strong></div>
+          <div class="feat"><span class="check">✓</span> Perfil completo do comprador via quiz</div>
+          <div class="feat"><span class="check">✓</span> Tags de intenção: crédito, prazo, urgência</div>
+          <div class="feat"><span class="check">✓</span> Perfil de comprador ideal por imóvel</div>
+          <div class="feat"><span class="check">✓</span> Compradores ativos notificados ao adicionar imóvel</div>
+          <div class="feat"><span class="check">✓</span> Perfil de agente premium com foto</div>
+          <div class="feat"><span class="check">✓</span> Painel de análise</div>
+        </div>
+      </div>
+      <div class="price-card">
+        <div class="price-card-body">
+          <div class="tier" style="color:var(--blue)">PRO</div>
+          <div><span class="amount">€199</span><span class="per">/mês</span></div>
+          <div class="desc">Até 120 imóveis reivindicados</div>
+          <a href="agent-dashboard.html" class="btn btn-primary" style="width:100%;justify-content:center;margin-bottom:20px">Subscrever</a>
+          <div class="feat"><span class="check">✓</span> Tudo do plano Starter +</div>
+          <div class="feat"><span class="check">✓</span> Até <strong>120 imóveis</strong></div>
+          <div class="feat"><span class="check">✓</span> Selo de agente destaque</div>
+          <div class="feat"><span class="check">✓</span> Posicionamento prioritário nos resultados</div>
+          <div class="feat"><span class="check">✓</span> Suporte prioritário</div>
+        </div>
+      </div>
+      <div class="price-card">
+        <div class="price-card-body">
+          <div class="tier" style="color:var(--blue)">ENTERPRISE</div>
+          <div><span class="amount">€299</span><span class="per">/mês</span></div>
+          <div class="desc">Até 200 imóveis reivindicados</div>
+          <a href="agent-dashboard.html" class="btn btn-primary" style="width:100%;justify-content:center;margin-bottom:20px">Subscrever</a>
+          <div class="feat"><span class="check">✓</span> Tudo do plano Pro +</div>
+          <div class="feat"><span class="check">✓</span> Até <strong>200 imóveis</strong></div>
+          <div class="feat"><span class="check">✓</span> Gestor de conta dedicado</div>
+          <div class="feat"><span class="check">✓</span> Integrações personalizadas</div>
+          <div class="feat"><span class="check">✓</span> Relatórios avançados</div>
         </div>
       </div>
     </div>
+    <!-- API / White-label -->
+    <div style="margin-top:28px;background:#fff;border:2px dashed var(--border);border-radius:16px;padding:28px 32px;text-align:center;max-width:680px;margin-left:auto;margin-right:auto">
+      <div style="font-size:13px;font-weight:700;color:var(--orange);text-transform:uppercase;letter-spacing:0.08em;margin-bottom:6px">🔌 API / White-Label</div>
+      <div style="font-size:22px;font-weight:800;color:var(--dark);margin-bottom:6px">Integre o quiz no seu website</div>
+      <p style="font-size:14px;color:var(--gray);margin-bottom:14px;line-height:1.6">Adicione o quiz de correspondência por IA diretamente ao website da sua agência. Os compradores fazem o quiz no seu site e os leads chegam com perfil completo.</p>
+      <span style="display:inline-block;background:var(--orange-l);color:var(--orange);font-weight:700;font-size:13px;padding:8px 20px;border-radius:20px">Brevemente · Contacte-nos para saber mais</span>
+    </div>
     <div style="text-align:center;margin-top:24px;font-size:13px;color:var(--gray);line-height:1.7;max-width:620px;margin-left:auto;margin-right:auto">
-      <strong>Como funcionam os créditos de leads:</strong> Cada vez que um comprador o contacta através do homeAImatch, um crédito de lead é usado. Vê sempre que chegou um novo lead — mas quando os créditos acabam, os dados de contacto ficam ocultos até fazer upgrade. Nenhum lead se perde.
+      <strong>Como funciona:</strong> Todos os planos incluem leads ilimitados. A diferença está na qualidade dos leads e nas funcionalidades. No plano grátis recebe apenas o nome, email e mensagem. Nos planos pagos, cada lead inclui o perfil completo do comprador, tags de intenção (crédito aprovado, prazo, nível de urgência), e o score de correspondência com o seu imóvel.
     </div>
   </div>
 </section>
