--- a/para-agentes.html
+++ b/para-agentes.html
@@ -335,6 +335,7 @@
           <div class="feat"><span class="check">✓</span> <strong>Leads ilimitados</strong> (básicos)</div>
           <div class="feat"><span class="check">✓</span> Imóveis ilimitados</div>
           <div class="feat"><span class="check">✓</span> Lead básico: nome, email, mensagem</div>
+          <div class="feat off"><span class="check">—</span> Reivindicar imóveis existentes </div>
           <div class="feat off"><span class="check">—</span> Perfil de agente premium</div>
           <div class="feat off"><span class="check">—</span> Perfil do comprador completo</div>
           <div class="feat off"><span class="check">—</span> Tags de intenção do comprador</div>
