--- a/para-agentes.html
+++ b/para-agentes.html
@@ -275,7 +275,7 @@
       <div class="feature-card">
         <div class="feature-icon" style="background:#e8f5e9">🔗</div>
         <h3>Reivindicar Imóveis</h3>
-        <p>Imóveis já no homeAImatch? Reivindique-os com um clique. Os seus dados de contacto substituem o placeholder e os leads vão diretamente para si.</p>
+        <p>Imóveis já no homeAImatch? Reivindique-os através de validação e receba leads de elevado valor. Perfil completo do comprador via quiz, tags de intenção (crédito, prazo, urgência) e identificação automática do comprador ideal por imóvel.</p>
       </div>
       <div class="feature-card">
         <div class="feature-icon" style="background:#f3e5f5">🔔</div>
