--- a/para-agentes.html
+++ b/para-agentes.html
@@ -457,7 +457,7 @@
       </div>
       <div class="faq-item" onclick="this.classList.toggle('open')">
         <div class="faq-q">Posso reivindicar imóveis já na plataforma?<span class="arrow">▾</span></div>
-        <div class="faq-a">Sim! Se os seus imóveis já estão listados no homeAImatch, procure-os no seu painel e reivindique-os com um clique. Os seus dados de contacto substituem o placeholder e todos os futuros leads vão diretamente para a sua conta. Isto conta para o limite de imóveis do seu plano.</div>
+        <div class="faq-a">Sim. Se os seus imóveis já estiverem listados no HomeAImatch, pode reivindicá-los através de um processo de validação e aprovação. Após confirmação, terá acesso aos compradores com maior compatibilidade para cada imóvel, incluindo perfil completo via quiz, tags de intenção (crédito, prazo, urgência) e informação sobre quantos utilizadores obtiveram uma correspondência superior a 90%. Todos os novos leads passam a ser enviados diretamente para si e contam para o limite do seu plano.</div>
       </div>
       <div class="faq-item" onclick="this.classList.toggle('open')">
         <div class="faq-q">O que é a API / White-Label?<span class="arrow">▾</span></div>
