--- a/para-agentes.html
+++ b/para-agentes.html
@@ -161,7 +161,7 @@
 
 <!-- NAV -->
 <nav class="nav">
-  <a href="index.html" class="nav-logo"><svg width="32" height="32" viewBox="0 0 100 100" fill="none" xmlns="http://www.w3.org/2000/svg"><rect width="100" height="100" rx="22" fill="#F5F7FA"/><path d="M50 18L18 42v40h24V58h16v24h24V42L50 18z" fill="#1E96D1" stroke="#1A2B3C" stroke-width="3"/><circle cx="50" cy="45" r="8" fill="#F5921B"/><path d="M42 82V58h16v24" stroke="#1A2B3C" stroke-width="2.5"/><path d="M18 42L50 18l32 24" stroke="#1A2B3C" stroke-width="3.5" stroke-linecap="round" stroke-linejoin="round" fill="none"/></svg> <span>home<span style="color:var(--blue)">AI</span>match</span></a>
+  <a href="index.html" class="nav-logo"><img src="logo-full.png" alt="homeAImatch" style="height:40px"></a>
   <div class="nav-links">
     <a href="#features">Funcionalidades</a>
     <a href="#pricing" class="hide-mobile">Preços</a>
@@ -477,7 +477,7 @@
   <p>Junte-se ao homeAImatch gratuitamente e comece a receber contactos de compradores qualificados por IA para os seus imóveis.</p>
   <div style="display:flex;gap:12px;justify-content:center;flex-wrap:wrap">
     <a href="agent-dashboard.html" class="btn btn-orange btn-lg">Criar Conta Grátis →</a>
-    <a href="mailto:hello@homeaimatch.com" class="btn btn-white btn-lg">Agendar Demo</a>
+    <a href="/cdn-cgi/l/email-protection#dfb7bab3b3b09fb7b0b2babeb6b2beabbcb7f1bcb0b2" class="btn btn-white btn-lg">Agendar Demo</a>
   </div>
 </section>
 
@@ -486,7 +486,4 @@
   <p>© 2026 homeAImatch · <a href="index.html" style="color:var(--blue)">homeaimatch.com</a> · Cork, Irlanda · <a href="legal.html" style="color:var(--gray)">Termos</a> · <a href="legal.html#privacy" style="color:var(--gray)">Privacidade</a></p>
 </footer>
 
-<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
-// Scroll-triggered fade-in
-const observer = new IntersectionObserver(entries => {
-  entries.forEach(e => { if (e.isIntersecting) { 
+<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"
