--- a/for-agents.html
+++ b/for-agents.html
@@ -276,7 +276,7 @@
       <div class="feature-card">
         <div class="feature-icon" style="background:#e8f5e9">🔗</div>
         <h3>Claim Listings</h3>
-        <p>Imóveis já no homeAImatch? Reivindique-os através de validação e receba leads de elevado valor. Full buyer profile from quiz, tags de intenção (crédito, prazo, urgência) e identificação automática do comprador ideal por imóvel.</p>
+        <p>Properties already on HomeAImatch? Claim them through our validation process and receive high-value leads. Full buyer profile via quiz, intent tags (financing, timeline, urgency), and automatic identification of the ideal buyer for each property.</p>
       </div>
       <div class="feature-card">
         <div class="feature-icon" style="background:#f3e5f5">🔔</div>
