--- a/agent-dashboard.html
+++ b/agent-dashboard.html
@@ -285,6 +285,18 @@ async function claimListing(propertyId) {
   }
 }
 
+async function cancelClaim(claimId) {
+  if (!confirm('Cancel this claim? This action cannot be undone.')) return;
+  try {
+    await apiFetch('/api/agents/claims/' + claimId, 'DELETE');
+    showToast('Claim cancelled', 'success');
+    loadDashboard();
+    renderContent();
+  } catch (err) {
+    showToast(err.message || 'Failed to cancel claim', 'error');
+  }
+}
+
 async function updateLeadStatus(leadId, status) {
   try {
     await apiFetch(`/api/agents/leads/${leadId}`, 'PUT', { status });
@@ -928,12 +940,13 @@ function renderClaims() {
 
     ${claims.length > 0 ? `<div class="card" style="margin-top:16px"><h3>My Claims</h3>
       <div class="table-wrap"><table>
-        <thead><tr><th>Property</th><th>Status</th><th>Claimed</th></tr></thead>
+        <thead><tr><th>Property</th><th>Status</th><th>Claimed</th><th>Actions</th></tr></thead>
         <tbody>
         ${claims.map(c => `<tr>
           <td style="font-weight:500">${c.properties?.title || 'Unknown'}</td>
           <td><span class="badge badge-${c.status}">${c.status}</span></td>
           <td style="font-size:12px;color:var(--gray)">${timeAgo(c.claimed_at)}</td>
+          <td>${c.status === 'pending' ? `<button class="btn btn-sm" style="background:#e53935;color:#fff;font-size:11px" onclick="cancelClaim('${c.id}')">Cancel</button>` : c.status === 'rejected' ? `<button class="btn btn-sm btn-outline" style="font-size:11px" onclick="cancelClaim('${c.id}')">Remove</button>` : ''}</td>
         </tr>`).join('')}
         </tbody>
       </table></div>
